--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,49 +1,4 @@
-astroid==2.0.4
-autopep8==1.4.3
-certifi==2019.6.16
-chardet==3.0.4
-colorama==0.3.9
-coreapi==2.3.3
-coreschema==0.0.4
-dataclasses==0.6
-Django==2.1
+Django==2.2.3
+gunicorn==19.9.0
 django-cors-headers==2.2.0
-django-filter==2.0.0
-django-rest-framework==0.1.0
-django-templated-mail==1.1.1
-django-webpack-loader==0.6.0
-djangorestframework==3.8.2
-djangorestframework-jwt==1.11.0
-djongo==1.2.31
-djoser==1.1.5
-idna==2.7
-inflection==0.3.1
-isort==4.3.4
-itypes==1.1.0
-Jinja2==2.10
-lazy-object-proxy==1.3.1
-MarkupSafe==1.0
-mccabe==0.6.1
-openapi-codec==1.3.2
-pbr==5.1.1
 Pillow==6.1.0
-psycopg2==2.7.5
-psycopg2-binary==2.8.3
-pycodestyle==2.4.0
-PyJWT==1.6.4
-pylint==2.2.2
-pymongo==3.7.2
-python-dotenv==0.10.3
-pytz==2018.5
-requests==2.19.1
-simplejson==3.16.0
-six==1.11.0
-sqlparse==0.2.4
-stevedore==1.30.0
-typed-ast==1.1.0
-uritemplate==3.0.0
-urllib3==1.23
-virtualenv==16.3.0
-virtualenv-clone==0.5.1
-virtualenvwrapper==4.8.2
-wrapt==1.10.11
