simplify nginx conf for backend

--- a/deploy/server/nginx.conf
+++ b/deploy/server/nginx.conf
@@ -1,13 +1,8 @@
-upstream web {  
-  ip_hash;
-  server server:8000;
-}
-
 server {
 
 
     location / {
-        proxy_pass http://web/;
+        proxy_pass http://server:8000;
     }
 
 
