--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,15 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@gravitano/vue-date-range-picker": "^0.1.7",
+        "@owumaro/vue-date-range-picker": "0.0.1",
         "core-js": "^2.6.5",
         "materialize-css": "^1.0.0-rc.2",
         "toastr": "^2.1.4",
         "vue": "^2.6.10",
         "vue-router": "^3.0.3",
+        "vue-styled-components": "^1.4.11",
+        "vue2-daterange-picker": "^0.3.1",
         "vuex": "^3.0.1",
         "vuex-chrome-plugin": "^0.1.1"
     },
@@ -24,6 +28,7 @@
         "babel-eslint": "^10.0.1",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
+        "moment": "^2.24.0",
         "sass": "^1.18.0",
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.6.10"
