--- a/deploy/main.yml
+++ b/deploy/main.yml
@@ -22,9 +22,20 @@
 
 - hosts: jenkins
 
+  vars:
+    pip_package: "{{ 'python3-pip' if ansible_os_family == 'Debian' else 'python-pip' }}"
+    pip_install_packages:
+      - name: docker
+      - name: docker-compose
+
   roles:
-    - role: geerlingguy.jenkins
-      become: yes
+    - { role: geerlingguy.repo-epel, when: ansible_os_family == "RedHat" } 
+    - geerlingguy.pip
+    - geerlingguy.docker    
+    - setup
+    - jenkins
+  become: yes
+  become_method: sudo
   tags: jenkins
 
 
