--- a/deploy/jenkins/Dockerfile
+++ b/deploy/jenkins/Dockerfile
@@ -4,9 +4,10 @@ USER root
 
 RUN apt-get update
 
-# TODO install ansible here
-
-#RUN apt-get update && apt-get install -y ruby make more-thing-here
+# install ansible here
+RUN echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
+RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367
+RUN apt update && apt install -y ansible
 
 COPY basic-security.groovy /var/jenkins_home/init.groovy.d/basic-security.groovy
 
