--- a/deploy/server/docker-compose.yml
+++ b/deploy/server/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - .:/app
       - ./../data:/data
+      - ./../media:/media
     expose:
       - "8000"
     restart: unless-stopped
