--- a/deploy/client/nginx.conf
+++ b/deploy/client/nginx.conf
@@ -3,6 +3,7 @@ server {
 	server_name localhost;
 
 	location / {
+			try_files $uri $uri/ /index.html;
             root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
@@ -14,4 +15,6 @@ server {
 
 	    proxy_pass http://localhost:9000/api/;
 	}
+
+
 }
